tests/invalid/function/generic_direct_call_infer_conflict.facet
fn same<T>(x: affine T, y: affine T) -> affine T {
  let _ = y;
  x
}

fn main() -> affine isize {
  (same 1 true)
}
